save text in recipes page and view cart page ,contrast failure,fixed it.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@82757 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
+++ b/projects/Media/docroot/assets/css/accessibility/assistive_color_overrides.css
@@ -464,7 +464,7 @@
 .assistive-mode #locabar_addresses{
 	background-color:#fff !important;
 }
-.assistive-mode :not(.cssbutton).orange{
+.assistive-mode *:not(.cssbutton).orange{
 	color: #AF3D08 !important;
 }
 .assistive-mode .unrecognized.error-message span.orange{
